Support XSL transformation with an ObjectOutputStream on-the-fly. Closes #201.